--- a/main.css
+++ b/main.css
@@ -12,6 +12,10 @@
     cursor: pointer;
     visibility: visible;
     opacity: 1;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .btn:hover {
